--- a/src/styles/-resize.scss
+++ b/src/styles/-resize.scss
@@ -14,7 +14,7 @@ html,body,#app,#app > .el-container{
     padding:0;
     height:100vh;
     overflow: hidden;
-    background-color: #f6f7fa;
+    background-color: #f0f0f0;
     // font-family:  -apple-system,BlinkMacSystemFont,Helvetica Neue,Tahoma,PingFang SC,Microsoft Yahei,Arial,Hiragino Sans GB,sans-serif;
     font-family: DINPro Medium,-apple-system,BlinkMacSystemFont,"PingFang SC","Segoe UI","Hiragino Sans GB","Microsoft YaHei","Helvetica Neue",Helvetica,Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol";
     -moz-osx-font-smoothing: grayscale;
