--- a/src/styles/-singleperson.scss
+++ b/src/styles/-singleperson.scss
@@ -3,6 +3,8 @@
     padding: 20px 30px;
     margin-bottom:20px;
     .chooseDepart{
+        position: relative;
+        z-index: 9;
         .choosetit{
             font-size: 13px;
             color: #666;
@@ -866,7 +868,7 @@
 	                height: 6px;
                     border-radius: 50%;
                     margin-right: 6px;
-                    margin-top:-3px;
+                    margin-top:-4px;
                     background-color: #8fb2f3;
                 }
             }
