--- a/src/styles/-DepIndex.scss
+++ b/src/styles/-DepIndex.scss
@@ -635,14 +635,14 @@
     .depDayCont{
         border: solid 1px #e5ecf2;
         margin-top: 16px;
+        display: flex;
         &:after{
           content: '';
           display: block;
           clear: both;
         }
         li{
-          width: 25%;
-          float: left;
+          flex:1;
           text-align: center;
           .depName{
             background-color: #f4f6f9;
@@ -677,11 +677,6 @@
         }
         li+li{
           border-left: 1px solid #e5ecf2;
-        }
-    }
-    .endepDay{
-        li{
-            width:33.3333%;
         }
     }
 }
